--- a/stock_market_prediction.ipynb
+++ b/stock_market_prediction.ipynb
@@ -138,7 +138,7 @@
         "\n",
         "st.title('Stock Price Predictions')\n",
         "st.sidebar.info('Welcome to the Stock Price Prediction App. Choose your options below')\n",
-        "st.sidebar.info(\"Created and designed by [Vikas Sharma](https://www.linkedin.com/in/vikas-sharma005/)\")\n",
+        "st.sidebar.info(\"Education Purpose\")\n",
         "\n",
         "def main():\n",
         "    option = st.sidebar.selectbox('Make a choice', ['Visualize','Recent Data', 'Predict'])\n",
